--- a/styles.css
+++ b/styles.css
@@ -49,10 +49,13 @@ td {
     text-align: center;
     font-family: sans-serif;
     font-size: 2em;
+    border: 1em solid burlywood;
+    background-color: burlywood;
 }
 .book-details {
-    text-align: center;
+    text-align: left;
     font-family: sans-serif;
     font-size: 1.3em;
-    padding: auto;
+    width: 39em;
+    margin: auto;
 }
