update background color

--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,6 @@
-
+body {
+    background-color: rgb(243, 236, 227);
+}
 
 .book-img {
     width: 9em;
@@ -47,6 +49,7 @@ td {
 }
 .book-title-details {
     text-align: center;
+    
     font-family: sans-serif;
     font-size: 2em;
     border: 1em solid burlywood;
@@ -58,4 +61,6 @@ td {
     font-size: 1.3em;
     width: 39em;
     margin: auto;
+    border: 2px solid black;
+    padding: 2em;
 }
